# trdr

./: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  README.md  docker-compose.yml  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: settings.json
.github/workflows/: pages.yml
_expo/static/js/web/: index-bc64239119d3d53967de1072ba4f26f3.js
apps/: README.md
apps/desktop/: package.json
apps/mobile/: App.tsx  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/assets/: data.json
apps/mobile/src/: auth.tsx  trdr-ui.ts  trdr-wishlist.ts
apps/web/: package.json  preview.html
scripts/: accumulate.ts  backtest.ts  build-preview.ts  build-snapshot.ts  e2e.ts
services/api/: package.json
services/api/src/: index.ts  userstate.ts
services/ingestion/: package.json
services/ingestion/src/: accumulate.test.ts  accumulate.ts  board.test.ts  board.ts  feed.ts  index.ts  library.ts  providers.ts  scan-once.ts  title.ts  watchlist-store.ts  wishlist.ts
services/model/: README.md  pyproject.toml
services/model/app/: estimator.py  harness.py  main.py  schemas.py
