[project]
name = "trdr-model"
version = "0.0.0"
description = "TRDR model service — fair-value, seller-score, mispricing, calibration/backtest harness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "mypy>=1.13"]

[tool.mypy]
strict = true
